add replication feature v2