@@ -1,5 +1,16 @@
+FROM gradle:7.6.2-jdk11 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build
+
+
+
 FROM adoptopenjdk/openjdk11
 
-ADD logicaScoolBot-0.0.1-SNAPSHOT.jar /app/bot.jar
+EXPOSE 8080
 
-ENTRYPOINT ["java","-jar","app/bot.jar"]
+RUN mkdir /app
+
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
